<resources>
    <string name="app_name">Cheez</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_content_view">ContentViewActivity</string>
    <string name="facebook_app_id">400973986751933</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="error_default">오류가 발생했습니다. 잠시 후에 다시 시도해주세요.</string>
    <string name="message_progress_default">잠시만 기다려주세요</string>
    <string name="title_activity_content_upload">치즈 만들기</string>
    <string name="message_title_required">제목을 입력해주세요</string>
    <string name="message_url_required">URL을 입력해주세요</string>
    <string name="label_upload_cheez">신선한 치즈를 만들어주세요!</string>
    <string name="label_show_profile">내 프로필 보기</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="label_my_posts_empty">아직 만든 치즈가 없어요 :(</string>
    <string name="label_report_dialog_title">신고하기</string>
    <string name="label_report_reason">신고사유</string>
    <string name="hint_report_body">ex) 제목과 관련 없는 링크</string>
    <string name="label_report_confirm">해당 게시물을 신고하시겠습니까?</string>
    <string name="label_report">신고</string>
    <string name="message_enter_report_body">내용을 입력해주세요</string>
    <string name="message_reported">신고되었습니다.</string>
    <string name="title_activity_saved_post_list">SavedPostListActivity</string>
    <string name="title_saved_cheez_list">저장한 치즈</string>
    <string name="label_empty_saved_post">저장된 치즈가 없어요 :(</string>
    <string name="label_show_bookmark">북마크 보기</string>
    <string name="label_comment">댓글</string>
    <string name="hint_comment_input">댓글을 입력해주세요</string>
    <string name="label_comment_submit">게시</string>
    <string name="message_comment_required">내용을 입력해주세요</string>
    <string name="label_comment_empty">아직 댓글이 없어요 :(</string>
    <string name="message_login_required">로그인해주세요</string>
    <string name="title_activity_single_content_view">SingleContentViewActivity</string>
    <string name="btn_facebook_login">페이스북으로 로그인하기</string>
    <string name="btn_skip_login">나중에 하기</string>
    <string name="button_skip_tutorial"><![CDATA[바로 로그인하기 >>]]></string>
    <string name="label_link">링크</string>
    <string name="label_select_main_image">대표이미지 설정</string>
    <string name="label_title">제목</string>
    <string name="label_description">설명</string>
    <string name="hint_tag">태그는 공백으로 구분해주세요</string>
    <string name="label_tag">태그</string>
    <string name="label_upload_submit">업로드하기</string>
    <string name="label_upload_title">업로드하기</string>
    <string name="error_invalid_url">잘못된 URL이에요 :(</string>
    <string name="message_prepare">준비중이에용 ლ(ʘ▽ʘ)ლ</string>
    <string name="message_upload_complete">업로드되었습니다</string>
    <string name="gcm_sender_id">727140817621</string>
    <string name="btn_edit_profile">프로필 수정</string>
    <string name="tb_follow_on">{fa-check} 팔로잉</string>
    <string name="tb_follow_off">{fa-plus} 팔로우</string>
    <string name="label_profile_title">프로필 보기</string>
    <string name="cheez_count">CHEEZ %d</string>
    <string name="follower_count">팔로워 %d</string>
    <string name="followee_count">팔로잉 %d</string>
    <string name="title_activity_profile_edit">ProfileEditActivity</string>
    <string name="label_edit_profile">프로필 수정</string>
    <string name="label_nickname">닉네임</string>
    <string name="label_state_message">한줄 소개</string>
    <string name="label_profile_image">프로필 사진</string>
    <string name="btn_edit_submit">수정하기</string>
    <string name="message_nickname_required">닉네임을 입력해주세요</string>
    <string name="error_nickname_duplicated">이미 사용중인 닉네임이에요 :(</string>

</resources>
