<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_secondary"
        android:paddingLeft="@dimen/padding_default"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="@dimen/dialog_titlebar_height"
            android:textColor="@color/text_dialog_title"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/label_report_dialog_title"/>

        <ImageButton
            android:id="@+id/btn_close_dialog"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/dialog_titlebar_height"
            android:layout_height="@dimen/dialog_titlebar_height"
            android:src="@drawable/ic_close_white_24dp"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_title"
        android:layout_marginTop="@dimen/report_dialog_body_padding"
        android:layout_marginLeft="@dimen/report_dialog_body_padding"
        android:layout_marginRight="@dimen/report_dialog_body_padding"
        android:text="제목"
        />
    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_subtitle"
        android:layout_marginLeft="@dimen/report_dialog_body_padding"
        android:layout_marginRight="@dimen/report_dialog_body_padding"
        android:text="게시자: m_e_l_t_i_n_g"
        />
    <TextView
        android:layout_margin="@dimen/report_dialog_body_padding"
        android:background="@color/lightgray"
        android:layout_width="match_parent"
        android:layout_height="@dimen/drawer_divider_width" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginLeft="@dimen/report_dialog_body_padding"
        android:layout_marginRight="@dimen/report_dialog_body_padding"
        android:text="@string/label_report_reason"
        />
    <EditText
        android:id="@+id/et_report_body"
        android:layout_width="match_parent"
        android:layout_height="@dimen/report_body_height"
        android:hint="@string/hint_report_body"
        android:gravity="top"
        android:layout_marginTop="@dimen/report_dialog_body_padding"
        android:layout_marginLeft="@dimen/report_dialog_body_padding"
        android:layout_marginRight="@dimen/report_dialog_body_padding"
        android:padding="@dimen/input_padding"
        android:background="@drawable/input_background"
        />
    <TextView
        android:layout_marginTop="@dimen/report_dialog_body_padding"
        android:layout_marginLeft="@dimen/report_dialog_body_padding"
        android:layout_marginRight="@dimen/report_dialog_body_padding"
        android:background="@color/lightgray"
        android:layout_width="match_parent"
        android:layout_height="@dimen/drawer_divider_width" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/report_dialog_body_padding">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/label_report_confirm"
            android:layout_centerVertical="true"/>
        <Button
            android:id="@+id/btn_report_submit"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn_size_small"
            android:layout_alignParentRight="true"
            android:background="@drawable/primary_button_background"
            android:textColor="@color/text_menu"
            android:textStyle="bold"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingLeft="@dimen/input_padding"
            android:paddingRight="@dimen/input_padding"

            android:text="@string/label_report"/>
    </RelativeLayout>



</LinearLayout>