<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_secondary"
        android:paddingLeft="@dimen/padding_default"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="@dimen/dialog_titlebar_height"
            android:textColor="@color/text_dialog_title"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/label_comment"/>

        <ImageButton
            android:id="@+id/btn_close_dialog"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/dialog_titlebar_height"
            android:layout_height="@dimen/dialog_titlebar_height"
            android:src="@drawable/ic_close_white_24dp"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_comment_list"
            android:layout_width="match_parent"
            android:layout_height="@dimen/comment_list_height" />
        <TextView
            android:id="@+id/tv_empty_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/label_comment_empty"
            android:height="@dimen/empty_label_height"
            android:gravity="center"
            android:visibility="gone"
            />
        <ProgressBar
            android:id="@+id/progress_comment_loading"
            style="@android:style/Widget.DeviceDefault.ProgressBar.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:visibility="gone"
            android:padding="@dimen/padding_post_loading_progress" />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/drawer_divider_width"
        android:background="@color/lightgray"
        android:layout_marginLeft="@dimen/comment_dialog_divider_margin"
        android:layout_marginRight="@dimen/comment_dialog_divider_margin"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/report_dialog_body_padding">
        <EditText
            android:id="@+id/et_comment"
            android:layout_toLeftOf="@+id/btn_comment_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_size_small"
            android:padding="@dimen/input_padding"
            android:layout_centerVertical="true"
            android:hint="@string/hint_comment_input"
            android:background="@null"/>
        <Button
            android:id="@+id/btn_comment_submit"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn_size_small"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/primary_button_background"
            android:textColor="@color/text_menu"
            android:textStyle="bold"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingLeft="@dimen/input_padding"
            android:paddingRight="@dimen/input_padding"
            android:text="@string/label_comment_submit"/>
    </RelativeLayout>

</LinearLayout>